# product-rec

./: .env.example  .gitignore  AGENTTHREAD_GUIDE.md  EMBEDDINGS_EXPLAINED.md  EVALUATION_METRICS_COMPARISON.md  INTEGRATION_SUMMARY.md  MS_AGENT_INTEGRATION.md  MULTI_AGENT_ARCHITECTURE.md  README.md  RETRIEVAL_EVAL_REPORT.md  agent_tools.py  app.py  deepeval_3agent_results.json  deepeval_ir_metrics_results.json  deepeval_llm.py  deepeval_results.json  deepeval_test_cases.py  example_agent.py  gradio_app.py  lastrun.txt  main.py  notes.txt  product_search.py  product_search_agent.py  pyproject.toml  pytest.ini  recommend.py  retrieval_eval.py  test_all_tools.py  test_detailed.py  user_preferences.json
.deepeval/: .deepeval_telemetry.txt
api/: api.py  gradio_app.py
data/: outdoor_products_300_with_lines.csv  user_preferences.json
docs/: DEEPEVAL_INTEGRATION_REPORT.md  DEEPEVAL_SETUP.md  FINAL_REPORT.md  GRADIO_GUIDE.md  MS_AGENT_INTEGRATION.md  MULTI_AGENT_ARCHITECTURE.md  PYLINT_FINDINGS.md  VIDEO_DEMO_SCRIPT.md  VIDEO_QUICK_REFERENCE.md
evaluation/: retrieval_ground_truth.py
evaluation/deepeval/: deepeval_comparison.py  deepeval_e2e_tests.py  (+7 more)
notebooks/: chromadb_query_examples.ipynb  understanding_embeddings.ipynb
src/: load_products.py  product_search.py  product_search_agent.py  show_embeddings.py
tests/: conftest.py  test_edge_cases.py  test_fuzzing.py  test_integration.py  test_memory.py  test_orchestrator.py  test_personalization_agent.py  test_security.py  test_visual_agent.py
tools/: agent_tools.py  search_tools.py  visualization_tools.py
(+22 files in other folders)
